update to standardised structure

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,3 +1,16 @@
+###############################################################################
+# Data Science Toolbox for Data Science Specialization                        #
+#                                                                             #
+# Manage applications for the Data Science Specialization                     #
+# Johns Hopkins University                                                    #
+#                                                                             #
+# Version 0.1, Copyright (C) 2015 Gregory D. Horne                            #
+#                                 (horne at member dot fsf dot org)           #
+#                                                                             #
+# Licensed under the terms of the GNU General Public license (GPL) v2         #
+###############################################################################
+
+
 [supervisord]
 nodaemon=true
 logfile=/var/log/supervisor/supervisord.log
@@ -5,6 +18,24 @@ pidfile = /tmp/supervisord.pid
 
 [program:rserver]
 command=/usr/lib/rstudio-server/bin/rserver
+stdout_logfile=/var/log/supervisor/%(program_name)s.log
+stderr_logfile=/var/log/supervisor/%(program_name)s.log
+user=root
+startsecs=0
+autorestart=false
+exitcodes=0
+
+[program:screen]
+command=sh -c "exec >/dev/tty 2>/dev/tty </dev/tty && /usr/bin/screen -s /bin/bash"
+stdout_logfile=/var/log/supervisor/%(program_name)s.log
+stderr_logfile=/var/log/supervisor/%(program_name)s.log
+user=dst
+startsecs=0
+autorestart=false
+exitcodes=0
+
+[program:wetty]
+command=/usr/local/bin/wetty.js -p 8000
 stdout_logfile=/var/log/supervisor/%(program_name)s.log
 stderr_logfile=/var/log/supervisor/%(program_name)s.log
 user=root
